# CodeAtlas

./: .dockerignore  .gitignore  .mcp.json  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  SECURITY.md  action.yml  docker-compose.yml  fly.toml  mkdocs.yml  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: agent-eval.yml  ci.yml  docker.yml  docs.yml  manual-proof-artifacts.yml  pr-intelligence.yml  release.yml  security.yml
Formula/: codeatlas.rb
benchmarks/: agent-suite.json  bench.py  eval-suite.json  flagship-report.json  flagship-report.md  local-agent-suite.json  local-repos.json  oss-eval-suite.json  report.md  repos.lock.yml  repos.yml  rerank-report.md  results.json
benchmarks/agent/: report.md  results.json
benchmarks/agent-live/: failures.json  report.md  results.json
benchmarks/data-lineage/: openlineage.json  report.md  results.json
benchmarks/oss/: misses.json  report.md  results.json
benchmarks/perf/: report.md  results.json
benchmarks/retrieval-v2/: report.json  report.md
deploy/: Caddyfile  Dockerfile  duckdns-update.sh  oracle-setup.sh  oracle-update.sh  stratum.env.example  stratum.service
deploy/grafana/: stratum-dashboard.json
docs/: ai-infra-case-study.md  architecture.md  cli.md  demo-script.md  deploy-digitalocean.md  deploy-fly.md  deploy-gcp.md  deploy-oracle.md  getting-started.md  hosted-mvp.md  index.md  languages.md  launch-post.md  limitations.md  mcp-tools.md  observability.md  release-checklist.md  resume.md  startup-roadmap.md  stratum-startup-plan.md  threat-model.md
docs/assets/: README.md
docs/landing/: index.md
examples/: README.md
examples/agent-fixture/: README.md
examples/data-pipeline/: README.md  manifest.json
examples/data-pipeline/dags/: orders.py
examples/demo-monorepo/: README.md
examples/demo-monorepo/auth/: session.py
examples/flask/: README.md  run.sh
examples/mcp-claude/: README.md
examples/ts-monorepo/: README.md  run.sh
frontend/: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  api.ts  index.css  main.tsx
src/codeatlas/: __init__.py  __main__.py  agent_context.py  agent_eval.py  cli.py  config.py  context_policy.py  context_security.py  data_lineage.py  eval.py  git_integration.py  github_app.py  hosted.py  hosted_eval.py  hosted_worker.py  ignore.py  indexer.py  models.py  observability.py  pr_analysis.py  rate_limit.py  repo_overview.py  retrieval_trace.py  sarif.py  server.py  viz.py
tests/: conftest.py  test_agent_eval.py  test_cli.py  test_config.py  test_context_policy.py  test_context_security.py  test_data_lineage.py  test_demo_monorepo.py  test_eval.py  test_git_integration.py  test_github_app.py  test_hosted.py  test_ignore.py  test_indexer.py  test_integration.py  test_isolation.py  test_metrics.py  test_perf_guard.py  test_pr_analysis.py  test_properties.py  test_rate_limit.py  test_rerank.py  test_retrieval_trace.py  test_search_init.py  test_security_scan.py  test_server.py
tests/fixtures/: github_push_webhook.json
tests/test_api/: test_routes.py
tests/test_graph/: test_analysis.py  test_export.py  test_store.py
tests/test_parsers/: test_bash_parser.py  test_c_parser.py  test_cpp_parser.py  test_csharp_parser.py  test_elixir_parser.py  test_go_parser.py  test_haskell_parser.py  test_java_parser.py  test_javascript_parser.py  test_julia_parser.py  test_kotlin_parser.py  test_lua_parser.py  test_ocaml_parser.py  test_php_parser.py  test_powershell_parser.py  test_python_parser.py  test_ruby_parser.py  test_rust_parser.py  test_scala_parser.py  test_sql_parser.py  test_svelte_parser.py  test_swift_parser.py  test_typescript_parser.py  test_zig_parser.py
tests/test_search/: conftest.py  test_embeddings.py  test_hybrid.py
tests/test_sync/: test_watcher.py  test_webhook.py
vscode-extension/: .gitignore  LICENSE  README.md  package-lock.json  package.json  tsconfig.json
vscode-extension/src/: extension.ts
(+91 files in other folders)
