[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "codeatlas"
version = "0.1.0"
description = "An MCP server that constructs real-time code knowledge graphs for AI coding agents"
readme = { file = "README.md", content-type = "text/markdown" }
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [{ name = "Aryan Saini" }]
keywords = ["mcp", "code-analysis", "knowledge-graph", "tree-sitter", "static-analysis", "ai-agents"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Quality Assurance",
    "Typing :: Typed",
]
dependencies = [
    "tree-sitter>=0.23.0",
    "tree-sitter-python>=0.23.0",
    "tree-sitter-typescript>=0.23.0",
    "tree-sitter-go>=0.23.0",
    "tree-sitter-rust>=0.23.0",
    "tree-sitter-java>=0.23.0",
    "tree-sitter-cpp>=0.23.0",
    "tree-sitter-c-sharp>=0.23.0",
    "pydantic>=2.0.0",
    "click>=8.0.0",
    "rich>=13.0.0",
    "watchdog>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/AryanSaini26/CodeAtlas"
Repository = "https://github.com/AryanSaini26/CodeAtlas"
Issues = "https://github.com/AryanSaini26/CodeAtlas/issues"

[project.optional-dependencies]
mcp = ["mcp>=1.0.0"]
search = ["faiss-cpu>=1.7.0", "sentence-transformers>=2.0.0"]
webhook = ["starlette>=0.27.0", "uvicorn>=0.20.0"]
all = ["codeatlas[mcp,search,webhook]"]
dev = ["pytest>=7.0.0", "pytest-cov>=4.0.0", "ruff>=0.1.0", "mypy>=1.0.0"]

[project.scripts]
codeatlas = "codeatlas.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/codeatlas"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "--cov=codeatlas --cov-report=term-missing --cov-report=xml --cov-fail-under=85"

[tool.coverage.run]
source = ["codeatlas"]
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "@abstractmethod",
]

[tool.ruff]
line-length = 100
src = ["src"]
target-version = "py311"
extend-exclude = ["tests/fixtures"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
mypy_path = "src"
